--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -8,22 +8,23 @@ de hardware que tem como função analisar a linguagem escrita ou falada
 \cite{jacksonmoulinier2007}.
 
 Existem duas abordagens de Processamento de Linguagem Natural, sendo que a
-primeira delas é chamada de simbólica ou racionalista e a outra de empírica. A primeira
-abordagem consiste em uma série de regras para a manipulação de símbolos, como as regras gramaticais que permitem identificar se uma frase está malformada ou não. A abordagem
-empírica está centrada na análise estatística da linguagem através de grandes quantidades
+primeira delas é chamada de simbólica ou racionalista e a outra de empírica ou
+estatística.
+A primeira abordagem consiste em uma série de regras para a manipulação de
+símbolos, como as regras gramaticais, que permitem identificar se uma frase está malformada ou não. A abordagem empírica está centrada na análise estatística da linguagem através de grandes quantidades
 de textos, como por exemplo, a utilização de modelos de Markov para reconhecer padrões
 na escrita \cite{jacksonmoulinier2007}.
 
 Existem diversos \textit{frameworks open source} que facilitam o desenvolvimento
-de \textit{softwares} para o Processamento de Linguagem Natural, sendo que entre
-esses destacam-se o \textit{Stanford's Core NLP Suite} \cite{corenlp}, \textit{Natural Language
-Toolkit} \cite{nltk}, \textit{Apache OpenNLP} \cite{opennlp} e \textit{Spacy}
+de \textit{softwares} para o Processamento de Linguagem Natural, sendo que
+dentre esses se destacam \textit{Stanford's Core NLP Suite} \cite{corenlp},
+\textit{Natural Language Toolkit} \cite{nltk}, \textit{Apache OpenNLP} \cite{opennlp} e \textit{Spacy}
 \cite{spacy}.
 Esses \textit{frameworks} nos permitem, entre outras coisas, efetuar análise de
 sentimentos, identificar tópicos e conteúdos.
 
 A rede social Reddit é o vigésimo terceiro \textit{website} mais acessado na
-internet e o sétimo mais acessado nos Estados Unidos da América \cite{alexa}.
+Internet e o sétimo mais acessado nos Estados Unidos da América \cite{alexa}.
 Através deste \textit{website}, seus usuários podem criar ou se inscrever em
 comunidades, também conhecidas como \textit{subreddits}.
 Uma vez que as comunidades são criadas pelos próprios usuários, podemos encontrar
@@ -34,12 +35,12 @@ de imagens engraçadas, etc.
 Nestas comunidades é possível visualizar e comentar \textit{links} enviados por
 outros usuários.
 Além disso, o usuário pode efetuar um voto de forma positiva, caso acredite que
-aquele \textit{link} é útil para a comunidade. Caso contrário, é possível
-efetuar um voto negativo.
+aquele \textit{link} é útil para a comunidade ou, é possível
+efetuar um voto negativo em caso contrário.
 Uma vez que os próprios usuários podem submeter \textit{links}, os eventos e
 notícias de todo o mundo são reportados no \textit{website}, como exemplo,
 pode-se citar as eleições ocorridas no ano de 2016 nos Estados Unidos e o
-tiroteio ocorrido em Paris.
+tiroteio ocorrido em Paris no dia 15 de Novembro de 2015.
 
 Neste trabalho será desenvolvido um software que permita realizar a
 análise dos comentários do \textit{website} Reddit. Mais
